<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.swastikijari.airone.Detail_of_Booking">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            >

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/holo_blue_light"
                app:cardCornerRadius="4dp"
                app:cardElevation="3dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:weightSum="3">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:text="@string/contact_information"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />

                    <EditText
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        />

                    <EditText
                        android:id="@+id/ed_phone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="40dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/phon"
                        android:inputType="phone" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="3dp"
                app:layout_constraintBottom_toTopOf="@+id/goto_displayticket"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/info"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/ed_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="Enter your name"
                        android:inputType="textPersonName" />

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:gravity="left|center"
                            android:onClick="Check0"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:gravity="left|center"
                            android:onClick="Check0"
                            android:text="@string/female" />
                    </RadioGroup>

                    <EditText
                        android:id="@+id/ed_age"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="Enter Your Age"
                        android:inputType="number" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/goto_displayticket"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:background="@drawable/rounded"
                android:text="Book Now"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                app:layout_constraintVertical_bias="0.564" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
